fixed map not showing on mobile screens | fixed homepage padding styles

--- a/app/_components/About/styles.module.css
+++ b/app/_components/About/styles.module.css
@@ -1,5 +1,5 @@
 .aboutSection {
-  padding: 60px 20px;
+  padding: 60px 0px;
   background-color: #fff;
 }
 
