--- a/app/_components/Contact/styles.module.css
+++ b/app/_components/Contact/styles.module.css
@@ -1,5 +1,5 @@
 .contactSection {
-  padding: 60px 20px;
+  padding: 60px 0px;
   background-color: #fff;
 }
 
@@ -7,12 +7,19 @@
   margin-bottom: 20px;
 }
 
+.contactContainer {
+  display: grid;
+  grid-template-rows: auto 320px;
+  gap: 20px;
+
+}
+
 
 @media (min-width: 720px) {
   .contactContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    grid-template-rows: auto auto;
   }
 }
 
