--- a/app/_components/Footer/styles.module.css
+++ b/app/_components/Footer/styles.module.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 40px 20px;
+  padding: 40px 0px;
   background-color: #161616;
 }
 
