--- a/app/_components/Gallery/styles.module.css
+++ b/app/_components/Gallery/styles.module.css
@@ -1,6 +1,6 @@
 .gallerySection {
   background-color: #fff;
-  padding: 60px 20px;
+  padding: 60px 0px;
 }
 
 .galleryGrid {
