--- a/app/_components/Rooms/styles.module.css
+++ b/app/_components/Rooms/styles.module.css
@@ -1,11 +1,11 @@
 .roomsSection {
-  padding: 60px 20px;
+  padding: 60px 0px;
   background-color: #F1F1F1;
 }
 
 .roomsGrid {
   display: grid;
   gap: 32px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   margin-top: 40px;
 }
