--- a/app/signin/_components/Banner/styles.module.css
+++ b/app/signin/_components/Banner/styles.module.css
@@ -18,6 +18,7 @@
   position: relative;
   color: #fff;
   letter-spacing: 2px;
+  text-align: center;
 }
 
 .bannerHeading::after {
